<resources>
  <string name="app_name">AppVNO</string>
  <string name="_500_bee_coins_have_been"><b>500 Bee Coins</b> been</string>
  <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</string>
  <string name="dummy_text2">Lorem ipsum dolor sit amet\nLorem ipsum dolor sit amet\nLorem ipsum dolor sit amet</string>
  <string name="temp_getStarted_1">Welcome to AppVNO</string>
  <string name="temp_getStarted_2">Free and secure calls and message to any AppVNO user in the World</string>
  <string name="temp_privacy_policy">Privacy Policy</string>
  <string name="temp_privacy_policy_underlined"><u>Privacy Policy</u></string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="temp_sign_up">Sign up here</string>
  <string name="temp_sign_in">Sign in</string>
  <string name="temp_permission_contacts_rationale">All this permission is need by the app to function correctly.</string>
  <string name="temp_terms_and_condition_text">I have read and accepted the <b>Terms of Use and General Content Provisions</b></string>
  <string name="title_activity_home">HomeActivity</string>
  <string name="by_tapping_get_started_you_agree_to_our_term_amp_policies"><![CDATA[By tapping \'Get Started\' you agree to our Term & Policies]]></string>
  <string name="get_started">Get Started</string>
  <string name="appVno_2020">\@2020 AppVNO.</string>
  <string name="verify_your_identity">Verify your Identity</string>
  <string name="user_your_fingerprint_to_verify_your_identity">User your fingerprint to verify your identity</string>
  <string name="login_to_your_account">Login to your Account</string>
  <string name="prefix_number">+63</string>
  <string name="phone_number">Phone number</string>
  <string name="make_sure_you_can_recieve_sms_to_this_number_so_that_we_can_send_you_a_code">Make sure you can recieve SMS to this number so that we can send you a code.</string>
  <string name="country">Country</string>
  <string name="register">Register</string>
  <string name="already_have_an_account">Already have an Account?</string>
  <string name="this_is_your_number">This is your number</string>
  <string name="wrong_number">Wrong number?</string>
  <string name="your_6_digit_code">Your 6 digit code</string>
  <string name="_00_00">00:00</string>
  <string name="resend_via_sms">Resend via sms</string>
  <string name="last_name">Last Name</string>
  <string name="date">Date</string>
  <string name="gender">Gender</string>
  <string name="complete_information">Complete Information</string>
  <string name="to_receive_the_best_ad_sponsored_experience_i_allow_free_bee_to">To receive the best ad-sponsored experience. I allow Free Bee to:</string>
  <string name="send_relevant_promtional_materials_via_sms_and_email_and_user_my_data_for_analytics_practices_to_improve_user_experience_and_loyalty_programs">Send relevant promotional materials via SMS and email and user my data for analytics practices to improve user experience and loyalty programs.</string>
  <string name="you_may_modify_your_privacy_policy_preference_or_opt_out_of_service_anytime_simply_send_us_and_email_at_help_freebeecalls_com">You may modify your privacy policy preference or opt out of service anytime. Simply send us and email at help @freebeecalls.com</string>
  <string name="i_agree">I Agree</string>
  <string name="terms_and_condition">Terms and Condition</string>
  <string name="free_call">Free Call</string>
  <string name="premium_call">Premium Call</string>
  <string name="use_google_location_service">Use Google Location Service</string>
  <string name="use_google_location_service_message">You need to enabled Google Location Service to login</string>
  <string name="login">Login</string>
  <string name="mobile_number">Mobile Number</string>
  <string name="empty">-</string>
  <string name="enter_mobile_number">Enter mobile number</string>
  <string name="password">Password</string>
  <string name="forgot_password_underline"><u>Forgot Password </u></string>
  <string name="sign_up_underline"><u>Sign Up Now</u></string>
  <string name="don_t_have_account_yet">Don\'t have an account yet?</string>
  <string name="search_country">Search Country</string>
  <string name="type_country_name_here">Type country name here</string>
  <string name="confirm">Confirm</string>
  <string name="sign_up">Sign up</string>
  <string name="next">Next</string>
  <string name="login_now"><u>Login Now</u></string>
  <string name="verification">Verification</string>
  <string name="a_code_was_sent">A code was sent to the number</string>
  <string name="enter_the_code_verify">Enter the code to verify this mobile number.</string>
  <string name="pinview_hint">------</string>
  <string name="invalid_code">Invalid code! Check if you\'ve entered the correct code or resend another code</string>
  <string name="resend_code"><u>Resend Code</u></string>
  <string name="submit_code">Submit Code</string>
  <string name="create_a_password">Create a Password</string>
  <string name="create_password">Create Password</string>
  <string name="create_your_password">Create your Password</string>
  <string name="re_enter_password">Re-enter Password</string>
  <string name="re_enter_your_password">Re-enter your Password</string>
  <string name="at_least_8_characters">At least 8 characters</string>
  <string name="must_contain_both_alphabetic">Must contain both alphabetic and numeric characters (e.g. a-z, 0-9) and with at least one upper character</string>
  <string name="you_can_also_enable_touch_id">You can also enable Touch ID to login using your fingerprint.</string>
  <string name="enable_log_in_using_fingerprint">Enable Log in using fingerprint?</string>
  <string name="cancel">Cancel</string>
  <string name="yes">Yes</string>
  <string name="continue_word">Continue</string>
  <string name="enter_personal_details">Enter Personal Details</string>
  <string name="name">Name</string>
  <string name="first_name">First Name</string>
  <string name="enter_first_name">Enter First Name</string>
  <string name="enter_last_name">Enter Last Name</string>
  <string name="age_verification">Age Verification</string>
  <string name="birth_year">Birth year</string>
  <string name="you_need_to_be">*You need to be at least 18 years old to sign up for free bee.</string>
  <string name="prefer_not_to_say">Prefer not to Say</string>
  <string name="female">Female</string>
  <string name="male">Male</string>
  <string name="referral_code_optional">Referral Code (Optional)</string>
  <string name="referral_code">Referral Code</string>
  <string name="enter_referral_code">Enter Referral Code</string>
  <string name="i_have_read_and_agree_terms">I have read and agree to the \n <u>Terms and Conditions.</u></string>
  <string name="i_have_read_and_agree_privacy">I have read and agree to the \n <u>Privacy Policy.</u></string>
  <string name="i_have_read_and_agree_news">I agree to receive notifications on news and promotions.</string>
  <string name="your_done">You\'re Done!</string>
  <string name="start_calling_and_messaging">Start calling and messaging your loved ones with Free Bee now</string>
  <string name="set_security_question">Set Security Question</string>
  <string name="skip_to_home_underline"><u>Skip to Home</u></string>
  <string name="enter_your_mobile">Enter your Mobile Number. We\'ll send a code to this number for verification.</string>
  <string name="touch_id_is_enabled">Touch ID is Enabled</string>
  <string name="you_can_use_your_fingerprint_as_verification">You can use your fingerprint as verification so you can proceed to reset your password.</string>
  <string name="use_fingerprint">Use Fingerprint</string>
  <string name="no_thanks">No Thanks</string>
  <string name="verify_your_phone_number">Verify your phone number by entering the code sent to you through SMS.</string>
  <string name="last_password">Last Password</string>
  <string name="enter_the_last_password">Enter the last password that you remember</string>
  <string name="enter_last_password">Enter last Password</string>
  <string name="select_security_question">Select Security Question</string>
  <string name="what_is_the_security_question">What is the security question that you chose to upon setting up?</string>
  <string name="security_question">Security Question</string>
  <string name="please_answer_your_security">Please answer your security question.</string>
  <string name="answer">Answer</string>
  <string name="type_your_answer">Type your answer</string>
  <string name="submit_answer">Submit Answer</string>
  <string name="account_verification">Account Verification</string>
  <string name="to_make_sure_that_you_are_the_owner">To make sure that you are the owner of this account, please answer this question.</string>
  <string name="you_will_need_to_contact_customer">You will need to contact Customer Support for further action</string>
  <string name="next_steps">Next Steps:</string>
  <string name="customer_support">Customer Support</string>
  <string name="back_to_login_underline"><u>Back to Login</u></string>
  <string name="success">Success!</string>
  <string name="your_account_details_">Your account details have been updated and you may now Login.</string>
  <string name="set_up_security_question">Set Up Security Question</string>
  <string name="to_make_your_account">To make your account more secure, set up a security question.</string>
  <string name="security_question_answer">Security Question Answer</string>
  <string name="enter_answer_to_your_security_question">Enter answer to your Security Question</string>
  <string name="your_security_question_has_been_set_up">Your Security question has been set up!</string>
  <string name="home">Home</string>
  <string name="contacts">Contacts</string>
  <string name="calls">Calls</string>
  <string name="messages">Messages</string>
  <string name="menu">Menu</string>
  <string name="what_are_you_shopping_for">What are you shopping for?</string>
  <string name="select_number_bee_coins_to_purchase">Select number of \n Bee Coins to purchase</string>
  <string name="what_are_bee_coins"><u>What are Bee Coins?</u></string>
  <string name="bee_coins_balance">Bee Coins Balance</string>
  <string name="_500_bee_coins">500 Bee Coins</string>
  <string name="_1000_bee_coins">1000 Bee Coins</string>
  <string name="how_to_use">How to Use</string>
  <string name="buy_bee_coins">Buy Bee Coins</string>
  <string name="confirm_purchase">CONFIRM PURCHASE</string>
  <string name="upon_confirming_you_will_be_taken">Upon confirming, you will be taken to our payment portal for checkout</string>
  <string name="you_ve_purchased">You\'ve purchased</string>
  <string name="they_ve_now_been_credited_into_your_account">They\'ve now been credited into your account</string>
  <string name="view_my_bee_coins"><u>View My Bee Coins</u></string>
  <string name="you_can_now_buy_premium_call_plans">You can now buy <b>Premium Call Plans </b>using Bee Coins to make premium calls.</string>
  <string name="buy_a_plan">Buy A Plan</string>
  <string name="back_to_bee_shop">Back To Bee Shop</string>
  <string name="okay_take_me_there">Okay Take Me There</string>
  <string name="we_couldn_t_successfully_process">We couldn\'t successfully process your payment through Apple Pay</string>
  <string name="try_again">Try Again</string>
  <string name="choose_another_payment_method"><u>Choose another payment method</u></string>
  <string name="got_a_bee_coin_pin">Got A Bee Coin Pin?</string>
  <string name="enter_the_pin_from_a_bee_coin_card">Enter the PIN from a Bee Coin Card</string>
  <string name="card_hint">00-0000-0000-0000</string>
  <string name="submit_pin"><u>Submit Pin</u></string>
  <string name="need_help"><u>Need Help?</u></string>
  <string name="invalid_pin">Invalid PIN</string>
  <string name="touch_id_has_been_enabled">Touch ID has been enabled!</string>
</resources>