<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".ui.profile.PersonalDetailActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@drawable/pre_login_bg">

    <include
        android:id="@+id/toolbar"
        layout="@layout/app_bar_pre_login" />

    <View
        android:id="@+id/container_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:layout_marginEnd="@dimen/margin_16dp"
        android:background="@drawable/container_rounded"
        app:layout_constraintBottom_toBottomOf="@id/v_end"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <TextView
        android:id="@+id/tv_contentTitle"
        style="@style/FreeBeeUH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/enter_personal_details"
        android:textColor="@color/colorBlack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/container_content" />

    <TextView
        android:id="@+id/tv_header1"
        style="@style/FreeBeeUH2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_32dp"
        android:layout_marginTop="@dimen/margin_32dp"
        android:layout_marginRight="@dimen/margin_32dp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="@id/container_content"
        app:layout_constraintRight_toRightOf="@id/container_content"
        app:layout_constraintTop_toBottomOf="@id/tv_contentTitle" />

    <TextView
        android:id="@+id/tv_desc1"
        style="@style/FreeBeeHP3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/first_name"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/tv_header1" />

    <EditText
        android:id="@+id/edt_firstName"
        style="@style/FreeBeeEditText"
        android:layout_width="0dp"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/padding_16dp"
        android:paddingEnd="@dimen/padding_16dp"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/tv_desc1" />

    <TextView
        android:id="@+id/tv_desc2"
        style="@style/FreeBeeHP3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/last_name"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/edt_firstName" />

    <EditText
        android:id="@+id/edt_lastName"
        style="@style/FreeBeeEditText"
        android:layout_width="0dp"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:paddingStart="@dimen/padding_16dp"
        android:paddingEnd="@dimen/padding_16dp"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/tv_desc2" />

    <TextView
        android:id="@+id/tv_header2"
        style="@style/FreeBeeUH2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/age_verification"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/edt_lastName" />

    <TextView
        android:id="@+id/tv_desc3"
        style="@style/FreeBeeHP3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="Year"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@id/edt_year"
        app:layout_constraintTop_toBottomOf="@id/tv_header2" />

    <TextView
        android:id="@+id/tv_desc4"
        style="@style/FreeBeeHP3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Month"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@id/spinner_month"
        app:layout_constraintTop_toTopOf="@id/tv_desc3" />

    <EditText
        android:id="@+id/edt_year"
        style="@style/FreeBeeEditText"
        android:layout_width="0dp"
        android:layout_marginEnd="@dimen/margin_4dp"
        android:hint="@string/birth_year"
        android:inputType="number"
        android:paddingStart="@dimen/padding_16dp"
        android:paddingEnd="@dimen/padding_16dp"
        android:maxLength="4"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toLeftOf="@id/spinner_month"
        app:layout_constraintTop_toBottomOf="@id/tv_desc3" />

<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Choose Month"-->
<!--        app:layout_constraintLeft_toRightOf="@id/edt_year"-->
<!--        app:layout_constraintRight_toRightOf="@id/tv_header1"-->
<!--        app:layout_constraintTop_toTopOf="@id/edt_year">-->

<!--      <AutoCompleteTextView-->
<!--          android:id="@+id/tv_month"-->
<!--          android:layout_width="match_parent"-->
<!--          android:layout_height="wrap_content"/>-->

<!--    </com.google.android.material.textfield.TextInputLayout>-->


    <androidx.appcompat.widget.AppCompatSpinner
        android:visibility="visible"
        android:id="@+id/spinner_month"
        style="@style/FreeBeeBaseSpinner"
        android:layout_width="0dp"
        android:layout_marginStart="@dimen/margin_4dp"
        app:layout_constraintLeft_toRightOf="@id/edt_year"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toTopOf="@id/edt_year" />

    <TextView
        android:id="@+id/tv_desc5"
        style="@style/FreeBeeHP3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/you_need_to_be"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/spinner_month" />

    <TextView
        android:id="@+id/tv_header3"
        style="@style/FreeBeeUH2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/gender"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/tv_desc5" />

    <RadioGroup
        android:id="@+id/rg_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/tv_header3">

      <RadioButton
          android:id="@+id/rb_male"
          style="@style/FreeBeeRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/male" />

      <RadioButton
          android:id="@+id/rb_female"
          style="@style/FreeBeeRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/margin_4dp"
          android:text="@string/female" />

      <RadioButton
          android:id="@+id/rb_not"
          style="@style/FreeBeeRadioButton"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/margin_4dp"
          android:text="@string/prefer_not_to_say" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_header4"
        style="@style/FreeBeeUH2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:text="@string/referral_code_optional"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/rg_gender" />

    <TextView
        android:id="@+id/tv_desc6"
        style="@style/FreeBeeHP3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp"
        android:text="@string/referral_code"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/tv_header4" />

    <EditText
        android:id="@+id/edt_referCode"
        style="@style/FreeBeeEditText"
        android:layout_width="0dp"
        android:hint="@string/enter_referral_code"
        android:inputType="text"
        android:paddingStart="@dimen/padding_16dp"
        android:paddingEnd="@dimen/padding_16dp"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/tv_desc6" />

    <CheckBox
        android:id="@+id/cb_terms"
        style="@style/FreeBeeCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:text="@string/i_have_read_and_agree_terms"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/edt_referCode" />

    <CheckBox
        android:id="@+id/cb_privacy"
        style="@style/FreeBeeCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:text="@string/i_have_read_and_agree_privacy"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/cb_terms" />

    <CheckBox
        android:id="@+id/cb_news"
        style="@style/FreeBeeCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:text="@string/i_have_read_and_agree_privacy"
        app:layout_constraintLeft_toLeftOf="@id/tv_header1"
        app:layout_constraintRight_toRightOf="@id/tv_header1"
        app:layout_constraintTop_toBottomOf="@id/cb_privacy" />

    <Button
        android:id="@+id/btn_continue"
        style="@style/FreeBeeButtonPrimary"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32dp"
        android:text="@string/continue_word"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cb_news"
        android:layout_marginBottom="@dimen/margin_32dp" />

    <View
        android:id="@+id/v_end"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_32dp"
        android:layout_marginBottom="@dimen/margin_32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_continue" />


  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>