<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.InputProfileActivity">


  <include
      android:id="@+id/inputProfile_app_bar"
      layout="@layout/app_bar_with_back" />

  <EditText
      android:id="@+id/inputProfile_edt_firstName"
      style="@style/EditTextPrimary"
      android:layout_width="match_parent"
      android:layout_marginTop="@dimen/margin_64dp"
      android:hint="@string/first_name"
      android:inputType="textPersonName"
      app:layout_constraintTop_toBottomOf="@id/inputProfile_app_bar" />

  <EditText
      android:id="@+id/inputProfile_edt_lastName"
      style="@style/EditTextPrimary"
      android:layout_width="match_parent"
      android:layout_marginTop="@dimen/margin_8dp"
      android:hint="@string/last_name"
      android:inputType="textPersonName"
      app:layout_constraintTop_toBottomOf="@id/inputProfile_edt_firstName" />

  <TextView
      android:id="@+id/inputProfile_tv_date"
      style="@style/EditTextPrimary"
      android:layout_width="match_parent"
      android:layout_marginTop="@dimen/margin_8dp"
      android:drawableEnd="@drawable/temp_ic_date_range_black_24dp"
      android:drawableTint="@color/colorHintPrimary"
      android:gravity="center_vertical"
      android:hint="@string/date"
      app:layout_constraintTop_toBottomOf="@id/inputProfile_edt_lastName" />

  <EditText
      android:id="@+id/inputProfile_edt_gender"
      style="@style/EditTextPrimary"
      android:layout_width="match_parent"
      android:layout_marginTop="@dimen/margin_8dp"
      android:hint="@string/gender"
      android:inputType="textPersonName"
      app:layout_constraintTop_toBottomOf="@id/inputProfile_tv_date" />

  <Button
      android:id="@+id/inputProfile_btn_continue"
      style="@style/ButtonPrimary"
      android:layout_width="match_parent"
      android:layout_marginLeft="@dimen/margin_32dp"
      android:layout_marginRight="@dimen/margin_32dp"
      android:layout_marginBottom="@dimen/margin_32dp"
      android:text="@string/continue_word"
      app:layout_constraintBottom_toTopOf="@+id/inputProfile_fragment_footer" />

  <fragment
      android:id="@+id/inputProfile_fragment_footer"
      android:name="app.pldt.appvno.ui.privacyPolicy.PrivacyFooterFragment"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      tools:layout="@layout/fragment_privacy_footer" />

</androidx.constraintlayout.widget.ConstraintLayout>