<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

  <TextView
      android:id="@+id/register_tv_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_32dp"
      android:layout_marginEnd="@dimen/margin_32dp"
      android:gravity="center"
      android:text="@string/make_sure_you_can_recieve_sms_to_this_number_so_that_we_can_send_you_a_code"
      app:layout_constraintTop_toTopOf="parent" />

  <com.jaredrummler.materialspinner.MaterialSpinner
      android:id="@+id/register_spinner_location"
      android:layout_width="match_parent"
      android:layout_height="@dimen/edit_text_primary_height"
      android:layout_marginStart="@dimen/margin_32dp"
      android:layout_marginTop="@dimen/margin_64dp"
      android:layout_marginEnd="@dimen/margin_32dp"
      android:hint="@string/country"
      app:layout_constraintTop_toBottomOf="@id/register_tv_title" />

  <LinearLayout
      android:id="@+id/register_container_phone_number"
      android:layout_width="0dp"
      android:layout_height="@dimen/edit_text_primary_height"
      android:layout_marginTop="@dimen/margin_8dp"
      android:background="@drawable/temp_edit_text_white"
      app:layout_constraintLeft_toLeftOf="@id/register_spinner_location"
      app:layout_constraintRight_toRightOf="@id/register_spinner_location"
      app:layout_constraintTop_toBottomOf="@id/register_spinner_location">

    <TextView
        android:id="@+id/tv_post_number_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_16dp"
        android:text="@string/prefix_number" />

    <View
        android:id="@+id/register_separator"
        android:layout_width="@dimen/separator_view_size_1dp"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_8dp"
        android:background="@color/colorSeparatorView" />

    <EditText
        android:id="@+id/register_edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:maxLength="10"
        android:padding="@dimen/padding_8dp" />
  </LinearLayout>

  <Button
      android:id="@+id/register_btn_register"
      style="@style/ButtonPrimary"
      android:layout_width="0dp"
      android:layout_marginTop="@dimen/margin_32dp"
      android:text="@string/register"
      app:layout_constraintLeft_toLeftOf="@id/register_spinner_location"
      app:layout_constraintRight_toRightOf="@id/register_spinner_location"
      app:layout_constraintTop_toBottomOf="@id/register_container_phone_number" />


  <TextView
      android:id="@+id/register_tv_signin_dec"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_32dp"
      android:text="@string/already_have_an_account"
      app:layout_constraintHorizontal_chainStyle="packed"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@id/register_tv_signin"
      app:layout_constraintTop_toBottomOf="@id/register_btn_register" />

  <TextView
      android:id="@+id/register_tv_signin"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/temp_sign_in"
      android:textColor="@color/colorHyperLinkPrimary"
      app:layout_constraintLeft_toRightOf="@id/register_tv_signin_dec"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="@id/register_tv_signin_dec" />

  <androidx.constraintlayout.widget.Group
      android:id="@+id/register_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      app:constraint_referenced_ids="register_tv_signin_dec,register_tv_signin,register_tv_title,register_btn_register,register_spinner_location,register_container_phone_number" />

</merge>