<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pre_login_bg"
    tools:context=".ui.password.forgotPassword.ForgotPassSecurityActivity">

  <include android:id="@+id/toolbar"
      layout="@layout/app_bar_pre_login"/>

  <View
      android:id="@+id/container_content"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginStart="@dimen/margin_16dp"
      android:layout_marginEnd="@dimen/margin_16dp"
      android:layout_marginTop="@dimen/margin_24dp"
      android:layout_marginBottom="@dimen/margin_32dp"
      android:background="@drawable/container_three_rounded"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toBottomOf="@id/toolbar" />

  <TextView
      android:id="@+id/tv_contentTitle"
      style="@style/FreeBeeUH1"
      android:textColor="@color/colorBlack"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_32dp"
      android:text="@string/select_security_question"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="@id/container_content" />

  <TextView
      android:id="@+id/tv_desc1"
      style="@style/FreeBeeHP2"
      android:textAlignment="center"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/margin_32dp"
      android:layout_marginEnd="@dimen/margin_32dp"
      android:text="@string/what_is_the_security_question"
      android:layout_marginTop="@dimen/margin_32dp"
      app:layout_constraintTop_toBottomOf="@id/tv_contentTitle"
      app:layout_constraintLeft_toLeftOf="@id/container_content"
      app:layout_constraintRight_toRightOf="@id/container_content" />


  <TextView
      android:id="@+id/tv_desc2"
      style="@style/FreeBeeHP4"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/margin_16dp"
      android:text="@string/security_question"
      app:layout_constraintLeft_toLeftOf="@id/tv_desc1"
      app:layout_constraintRight_toRightOf="@id/tv_desc1"
      app:layout_constraintTop_toBottomOf="@id/tv_desc1" />

  <androidx.appcompat.widget.AppCompatSpinner
      android:id="@+id/spinner_question"
      style="@style/FreeBeeBaseSpinner"
      android:layout_width="0dp"
      android:layout_marginEnd="@dimen/margin_32dp"
      android:layout_marginStart="@dimen/margin_32dp"
      app:layout_constraintLeft_toLeftOf="@id/container_content"
      app:layout_constraintRight_toRightOf="@id/container_content"
      app:layout_constraintTop_toBottomOf="@id/tv_desc2" />

  <Button
      android:id="@+id/btn_continue"
      style="@style/FreeBeeButtonPrimary"
      android:enabled="false"
      android:layout_marginTop="@dimen/margin_32dp"
      android:layout_marginBottom="@dimen/margin_32dp"
      android:text="@string/continue_word"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintBottom_toBottomOf="@id/container_content" />

</androidx.constraintlayout.widget.ConstraintLayout>

